# rapt2

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  cliff.toml  main.py  pyproject.toml  transducer.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/bnf/: core_grammar.bnf  dependency_grammar.bnf  extended_grammar.bnf  threevl_grammar.bnf
src/rapt/: __init__.py  rapt.py
src/rapt/transformers/: base_translator.py
src/rapt/transformers/qtree/: constants.py  operators.py  qtree_translator.py
src/rapt/transformers/sql/: __init__.py  sql_translator.py
src/rapt/treebrd/: errors.py  node.py  schema.py  treebrd.py
src/rapt/treebrd/grammars/: __init__.py  condition_grammar.py  core_grammar.py  extended_grammar.py  proto_grammar.py  syntax.py
src/rapt2/: __init__.py  rapt.py
src/rapt2/transformers/: base_translator.py
src/rapt2/transformers/qtree/: constants.py  operators.py  qtree_translator.py
src/rapt2/transformers/sql/: __init__.py  sql_translator.py
src/rapt2/treebrd/: attributes.py  condition_node.py  errors.py  node.py  schema.py  treebrd.py  utility.py
src/rapt2/treebrd/grammars/: __init__.py  condition_grammar.py  core_grammar.py  dependency_grammar.py  (+4 more)
tests/: test_rapt.py
tests/transformers/: __init__.py  test_dependency_latex_translation.py  test_rapt_to_qtree.py  test_transfomer.py
tests/transformers/sql_translator/: __init__.py  test_translation_sequence.py  test_translation_sql.py  test_translator.py
tests/treebrd/: test_attributes.py  test_condition_node.py  test_node.py  test_node_binary.py  test_node_dependency.py  test_node_unary.py  test_schema.py  test_treebrd.py  test_utility.py
tests/treebrd/grammars/: grammar_test_case.py  test_condition_grammar.py  test_core_grammar.py  test_dependency_grammar.py  test_extended_grammar.py  test_proto_grammar.py  test_syntax.py  test_threevl_grammar.py
(+9 files in other folders)
