[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapt2"
version = "0.2.0"
description = "Relational algebra parsing tools"
authors = [
    { name = "Aidan Bailey" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary==2.9.10",
    "pyparsing>=3.2.3",
]
license = { file = "LICENSE.txt" }
keywords = ["relational-algebra", "parser", "database", "query"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rapt2"]

